# phy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: bouncing_ball.rs  coupled_oscillators.rs  driven_oscillator.rs  duffing.rs  pendulum.rs  van_der_pol.rs
geom2/src/: lib.rs  plane.rs  polygon.rs
src/: euler.rs  lib.rs  param.rs  rk4.rs  rot.rs  var.rs
src/tests/: euler.rs  mod.rs  param.rs  rk4.rs  rot.rs  system.rs
