[package]
name = "metaphysics"
version = "0.2.0"
edition = "2024"
description = "Generic extendable first-order differential equation solver"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"

[features]
default = ["std"]
std = ["glam/std"]

[dependencies]
glam = { version = "0.31.0", default-features = false }
