[package]
name = "phy"
version = "0.1.1"
edition = "2024"
description = "Generic extendable first-order differential equation solver"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/agerasev/metaphysics"
repository = "https://github.com/agerasev/metaphysics"
documentation = "https://docs.rs/phy"

[dependencies]
glam = { version = "0.31.0", default-features = false, features = [
    "nostd-libm",
] }
