[package]
name = "phy"
version = "0.2.0"
edition = "2024"
description = "Generic extendable first-order differential equation solver"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/agerasev/phy"
repository = "https://github.com/agerasev/phy"
documentation = "https://docs.rs/phy"

[features]
default = ["std"]
std = ["glam/std"]

[dependencies]
glam = { version = "0.32.0", default-features = false, features = [
    "nostd-libm",
] }
libm = { version = "0.2.11", default-features = false }

[dev-dependencies]
approx = "0.5.1"
